fixed spacing on display maybe fixed double adding

--- a/spotify-thing/src/App.css
+++ b/spotify-thing/src/App.css
@@ -96,29 +96,30 @@
   grid-auto-flow:column;
   margin-top: 3vh;
   margin-bottom: 5vh;
+  max-width:85vw;
 }
 
 .Playlist-scroller{
   -ms-overflow-style: none;
-  display:grid;
-  width:85vw;
+  display:flex;
+  max-width:85vw;
   grid-auto-flow:column;
   grid-auto-columns: 17%;
-  justify-content: center;
+  justify-content: space-between;
   overflow-x:scroll;
   overscroll-behavior-inline: contain;
   position: relative;
+  gap:100px;
 }
 
 .Playlist-image{
   width: 27vh;
   height: 27vh;
-
+  justify-content: space-around;
   background-color: black;
   animation: fadeInAnimation ease 5s;
   animation-iteration-count: 1;
   animation-fill-mode: forwards;
-  margin-right: 200px;
 }
 
 .Playlist-label{
@@ -190,9 +191,10 @@ a:visited {
   }
 
   .Playlist-scroller{
-    gap:30vw;
+    gap:10vw;
     margin-left: 2vw;
     margin-right: 2vw;
+    justify-content: space-between;
   }
   .Scroll-button{
     display: none;
